# dioxico

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml  alert.rs  button.rs  checkbox.rs  chips.rs  demo.rs  dialog.rs  error.rs  icon.rs  icon_button.rs  input.rs  number_input.rs  progress_bar.rs  radio.rs  select.rs  slider.rs  spinner.rs  switch.rs  textarea.rs  theme.rs
src/: classes.rs  lib.rs  state.rs  style.rs  styles.rs  theme.rs  util.rs
src/assets/css/: dioxico.css
src/components/: alert.rs  button.rs  checkbox.rs  chips.rs  config_provider.rs  dialog.rs  error.rs  icon.rs  icon_button.rs  input.rs  mod.rs  number_input.rs  progress_bar.rs  radio.rs  select.rs  slider.rs  spinner.rs  switch.rs  textarea.rs
src/hooks/: mod.rs  use_click_away.rs  use_theme.rs
