[package]
name = "dioxico"
version = "0.1.0"
edition = "2021"

[dependencies]
csscolorparser = "0.6.2"
dioxus = "0.4.0"
gloo-timers = "0.2.6"
js-sys = "0.3"
wasm-bindgen = { version = "0.2.83" }
web-sys = { version = "0.3.60", features = ["console", "CssStyleDeclaration", "Document", "Element", "HtmlElement", "HtmlHeadElement", "Node", "Range", "Selection", "Window"] }

[dev-dependencies]
convert_case = "0.6.0"
dioxus-web = "0.4.0"
