[package]
name = "dioxico"
version = "0.1.0"
edition = "2021"

[dependencies]
csscolorparser = "0.8"
dioxus = "0.7"
rand = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
convert_case = "0.11"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
dioxus = { version = "0.7", features = ["web"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
