[package]
name = "dioxico"
version = "0.1.0"
edition = "2021"

[dependencies]
csscolorparser = "0.8"
dioxus = "0.7"
rand = "0.10"

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
wasmtimer = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
convert_case = "0.11"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
dioxus = { version = "0.7", features = ["web"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
